--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,35 @@
-asgiref==3.5.2
-backports.zoneinfo==0.2.1
-Django==4.1.1
+alembic==1.8.1
+anyio==3.6.1
+bcrypt==4.0.0
+cffi==1.15.1
+click==8.1.3
+colorama==0.4.5
+cryptography==38.0.1
+ecdsa==0.18.0
+fastapi==0.85.0
+greenlet==1.1.3
+h11==0.14.0
+httptools==0.5.0
+idna==3.4
+Mako==1.2.3
+MarkupSafe==2.1.1
+passlib==1.7.4
 psycopg2==2.9.3
 pyaml-env==1.1.5
+pyasn1==0.4.8
+pycparser==2.21
+pydantic==1.10.2
 python-box==6.0.2
+python-dotenv==0.21.0
+python-jose==3.3.0
+python-multipart==0.0.5
 PyYAML==5.4.1
-sqlparse==0.4.2
-tzdata==2022.2
+rsa==4.9
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==1.4.41
+starlette==0.20.4
+typing_extensions==4.3.0
+uvicorn==0.18.3
+watchfiles==0.17.0
+websockets==10.3
